--- a/Gym_Customer_Churn_Prediction.ipynb
+++ b/Gym_Customer_Churn_Prediction.ipynb
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "b0NOP_CF1xrm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "hPGlFW315sG5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "DOj0fw7NBQmw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +378,7 @@
       "metadata": {
         "id": "58kjvkxlOjOM"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "id": "AqpZdilq9jRI",
         "outputId": "4f373415-78ae-46c8-c5a1-e398d7ac79a8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "6N6I4TqfDSMC"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "A5WlRo7jiZZk"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -609,7 +609,7 @@
       "metadata": {
         "id": "iiI2sOVqEkHj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +625,7 @@
         "id": "EFEhM94jPPGQ",
         "outputId": "1dfaaae3-5ee1-4921-ffa6-36608a263f36"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1028,7 +1028,7 @@
         "id": "Ctc1JyznPWay",
         "outputId": "62cd20ea-c89c-4a6d-b6a3-b09f0fe7b582"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1913,7 +1913,7 @@
       "metadata": {
         "id": "usxiMAZn5tZM"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1928,7 +1928,7 @@
         "id": "RMBeML5g54Kg",
         "outputId": "a1186d17-d085-4040-e9a3-31b2bdc9f8da"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1981,7 +1981,7 @@
         "id": "s_1paK7mCdQ9",
         "outputId": "d5baad33-2d37-4bd0-a400-16cb87a5a9cb"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2168,7 +2168,7 @@
         "id": "Hz9CiPceaDiv",
         "outputId": "0fd7e004-d2f8-48ae-964d-ae670c89fb5c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2707,7 +2707,7 @@
         "id": "1oSZ_o7LgfQe",
         "outputId": "f983aea4-96e2-41c9-a48d-5aa0dd306023"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3132,7 +3132,7 @@
         "id": "VrEQnVeaL_WQ",
         "outputId": "c1585023-8ed7-466c-d2bc-2364a354ed1c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3800,7 +3800,7 @@
         "\n",
         "- Strong multicollinearity exists between the features 'contract_period' and 'month_to_end_contract', as well as between 'avg_class_frequency_total' and 'avg_class_frequency_current_month'. Removing one of the correlated variables is advisable to address this issue.\n",
         "\n",
-        "Based on these insights, gradient boosting models like XGBoost or LightGBM can be appropriate for building a churn prediction model.\n",
+        "Based on these insights, gradient boosting models can be appropriate for building a churn prediction model.\n",
         "\n",
         "\n"
       ],
